index.css
html, body {
    height: 100%;
    width: 100%;
    padding: 0px;
    margin: 0px;
    color: #e3e2e8;
    background-color: #121318; /* Infinite hot black body colour */
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}

button {
    color: #274587;
    background: #9ab5ff;
    padding: 5px;
    margin: 0px;
    border: none;
    border-radius: 5px;
}

button:hover {
    opacity: 0.9;
}

button:active {
    opacity: 0.7;
}

.grid {
    height: 90%;
    width: 100%;
    display: flex;
    flex-flow: row wrap;
    align-items: flex-start;
    align-content: center;
    /* background-color: red; */
}

.item {
    /* background-color: green; */
    width: 23vw;
    margin-left: 1vw;
    margin-right: 1vw;
    margin-top: 0.45vh;
    margin-bottom: 0.45vh;
    height: 2.7vh;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    align-content: center;
}

.question {
    margin-left: 2%;
    width: 30%;
}

.answer {
    width: 20%;
}

.input {
    width: 40%;
    border: none;
    border-radius: 3px;
}

.header {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}

/*

Background: #121318
Background Bright: #38393e

Text: #e3e2e8;

Primary: #9ab5ff
Primary Accent: #274587

Secondary: #3f4863
Secondary Accent: #aeb8d8

Tertiary: #e4a0e3
Tertiary Accent: #6a326d

Error: #93000a
Error Accent: #ffdad6

*/

